# jax_to_embedded

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  jax_test.py  ll_to_lib.cmake
cm4-qemu/: CMakeLists.txt  boot.s  link.ld  system_ARMCM4.c
cm4-qemu/cmake/: check-clang.cmake
runner/: CMakeLists.txt  jax_quad_roots.h  main.c
